# VestAgents

./: .env.example  .gitignore  README.md
evaluation/: evaluator.py  handle_eval.py
evaluation/.deepeval/: .deepeval_telemetry.txt
evaluation/csvs/: baseline_questions.csv  enem_questions.csv  fewshot_questions.csv  paired_questions.csv
evaluation/etc/: generate_enem_dataset.py  json_to_csv.py
evaluation/eval_result/baseline/: eval_baseline_questions.json  eval_baseline_questions_output.csv
evaluation/eval_result/baseline/analysis/: grouped_scores.json  metric_statistics.json
evaluation/eval_result/enem/: eval_enem_questions.json  eval_enem_questions_output.csv
evaluation/eval_result/enem/analysis/: grouped_scores.json  metric_statistics.json
evaluation/eval_result/fewshot/: eval_fewshot_questions.json  eval_fewshot_questions_output.csv
evaluation/eval_result/fewshot/analysis/: grouped_scores.json  (+1 more)
evaluation/eval_result/paired/: eval_paired_questions.json  eval_paired_questions_output.csv
fewshot_crews/src/raia_agents/: crew.py  main.py
paired_crew/src/raia_agents/: crew.py  main.py
retrieval_generate_crew/: pyproject.toml
retrieval_generate_crew/src/raia_agents/: crew.py  main.py
retrieval_generate_crew/src/raia_agents/config/: agents.yaml  tasks.yaml
retrieval_generate_crew/src/raia_agents/tools/: RAGTool.py
scrapper_crew/: pyproject.toml
scrapper_crew/src/raia_agents/: crew.py  main.py
scrapper_crew/src/raia_agents/config/: agents.yaml  tasks.yaml
scrapper_crew/src/raia_agents/tools/: RawParagraphTool.py  Serper.py
(+11 files in other folders)
